<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string translatable="false" name="app_name">ShareForwarding</string>

  <string name="intent_filter_label">Extract and forward</string>
  <string name="toast_no_app_is_installed_for">No app is installed to open</string>

  <!-- Settings -->
  <string name="toast_settings_requires_api_11">Android 3.0 or higher is required to edit the app settings</string>

  <!-- Settings: Force chooser dialog -->
  <string translatable="false" name="pref_force_chooser_dialog_key">pref_force_chooser_dialog</string>
  <string translatable="false" name="pref_force_chooser_dialog_default">false</string>
  <string name="pref_force_chooser_dialog_title">Force chooser dialog</string>
  <string name="pref_force_chooser_dialog_summary_on" >open: Intent.createChooser(intent)</string>
  <string name="pref_force_chooser_dialog_summary_off">open: intent</string>

  <!-- Settings: Force \"text/html\" type -->
  <string translatable="false" name="pref_force_text_html_key">pref_force_text_html</string>
  <string translatable="false" name="pref_force_text_html_default">false</string>
  <string name="pref_force_text_html_title">Force \"text/html\" type: when scheme is \"http\" or \"https\" and type cannot be inferred</string>
  <string name="pref_force_text_html_summary_on" >open: with web browser</string>
  <string name="pref_force_text_html_summary_off">@string/pref_force_chooser_dialog_summary_off</string>

  <!-- Settings: Convert \"geo:\" coordinates to Google Maps URI -->
  <string translatable="false" name="pref_convert_geo_to_googlemaps_key">pref_convert_geo_to_googlemaps</string>
  <string translatable="false" name="pref_convert_geo_to_googlemaps_default">false</string>
  <string name="pref_convert_geo_to_googlemaps_title">Convert \"geo:\" coordinates to Google Maps URI</string>
  <string name="pref_convert_geo_to_googlemaps_summary_on" >open: with Google Maps URI</string>
  <string name="pref_convert_geo_to_googlemaps_summary_off">open: \"geo:\" intent</string>
</resources>
